<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vdc.resume.MainActivity">

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="0dp"
        tools:layout_editor_absoluteX="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        tools:ignore="ScrollViewSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="92dp"
            tools:layout_editor_absoluteX="7dp"
            tools:layout_editor_absoluteY="5dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/textView2"
                android:layout_marginRight="10dp"

                app:srcCompat="@drawable/pic"
                android:contentDescription=""
                tools:ignore="ContentDescription,RtlHardcoded" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:text="@string/chuong_vu"
                android:textColor="#000000"
                android:textSize="35sp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_alignParentTop="true"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="#000000"
                android:textSize="12dp"
                android:layout_below="@+id/textView2"
                android:layout_alignLeft="@+id/textView2"
                android:layout_alignStart="@+id/textView2"
                tools:ignore="SpUsage" />

            <View
                android:id="@+id/view5"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/imageView4"
                android:layout_marginTop="10dp"
                android:background="@android:color/holo_red_dark" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="494dp"
            tools:layout_editor_absoluteX="7dp"
            tools:layout_editor_absoluteY="97dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView5"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/grad"
                android:textSize="10sp"
                tools:layout_editor_absoluteX="-432dp"
                tools:layout_editor_absoluteY="568dp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/edu"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView4"
                android:layout_alignStart="@+id/textView4"
                android:layout_below="@+id/textView4"
                android:text="@string/uml_school"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/skills"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:text="@string/skills"
                android:layout_below="@+id/textView5"
                android:layout_alignLeft="@+id/textView5"
                android:layout_alignStart="@+id/textView5"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/skill1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/skills"
                android:layout_alignStart="@+id/skills"
                android:layout_below="@+id/skills"
                android:textSize="10sp"
                android:text="@string/skill1"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/projects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/project"
                android:textSize="12sp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_below="@+id/skill1"
                android:layout_alignLeft="@+id/skill1"
                android:layout_alignStart="@+id/skill1" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project1"
                android:textSize="10sp"
                android:layout_below="@+id/projects"
                android:layout_alignLeft="@+id/projects"
                android:layout_alignStart="@+id/projects"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/experience"
                android:textSize="12sp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_below="@+id/textView10"
                android:layout_alignLeft="@+id/textView10"
                android:layout_alignStart="@+id/textView10"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exper1"
                android:textSize="10sp"
                tools:ignore="SmallSp"
                android:layout_below="@+id/textView11"
                android:layout_alignLeft="@+id/textView11"
                android:layout_alignStart="@+id/textView11" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/textView12"
                android:text="@string/date1"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView12"
                android:layout_alignStart="@+id/textView12"
                android:layout_below="@+id/textView12"
                android:layout_marginLeft="21dp"
                android:layout_marginStart="21dp"
                android:text="@string/lab_assistant"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jobs"
                android:textSize="10sp"
                android:layout_below="@+id/textView14"
                android:layout_centerHorizontal="true"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grader"
                android:textSize="10sp"
                android:layout_below="@+id/textView15"
                android:layout_alignLeft="@+id/textView14"
                android:layout_alignStart="@+id/textView14"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/assembly"
                android:textSize="10sp"
                android:layout_below="@+id/textView16"
                android:layout_alignLeft="@+id/textView15"
                android:layout_alignStart="@+id/textView15"
                android:layout_alignRight="@+id/textView15"
                android:layout_alignEnd="@+id/textView15"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:textSize="10sp"
                android:text="@string/autoliv"
                android:layout_below="@+id/textView17"
                android:layout_alignLeft="@+id/textView12"
                android:layout_alignStart="@+id/textView12"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/autolivexp"
                android:textSize="10sp"
                android:layout_below="@+id/textView"
                android:layout_alignLeft="@+id/textView16"
                android:layout_alignStart="@+id/textView16"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/autolivdate"
                android:textSize="10sp"
                android:layout_alignTop="@+id/textView"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/autolivexp1"
                android:textSize="10sp"
                android:layout_below="@+id/textView7"
                android:layout_alignLeft="@+id/textView7"
                android:layout_alignStart="@+id/textView7"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                tools:ignore="SmallSp" />
        </RelativeLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
